# haptiquad_ros

./: .gitignore  .gitmodules  README.md
haptiquad_msgs/: CMakeLists.txt  package.xml
haptiquad_msgs/msg/: EstimatedForces.msg  FrictionParameters.msg  ObserverGains.msg  ResidualErrorStamped.msg  ResidualsStamped.msg
haptiquad_plot/: CMakeLists.txt  package.xml  setup.py
haptiquad_plot/launch/: force_plotter.launch  residual_plotter.launch
haptiquad_plot/scripts/: force_plotter.py  residual_plotter.py
haptiquad_plot/src/haptiquad_plot/: force_dialogs.py  plot_libs.py  plotter_base.py  residual_dialogs.py
haptiquad_ros/: CMakeLists.txt  package.xml
haptiquad_ros/config/: anymal_config.yaml
haptiquad_ros/include/: anymal_wrapper.hpp  wrapper_base.hpp
haptiquad_ros/launch/: haptiquad_anymal.launch
haptiquad_ros/src/: anymal_wrapper.cpp  wrapper_base.cpp
