<?xml version="1.0"?>
<package>
  <name>haptiquad_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <author email="michele.lisi@phd.unipi.it">Michele Lisi</author>
  <maintainer email="michele.lisi@phd.unipi.it">Michele Lisi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>