<?xml version="1.0"?>
<package>
  <name>haptiquad_plot</name>
  <version>0.1.0</version>
  <description>A sample ROS1 Python package</description>
  <maintainer email="michele.lisi@phd.unipi.it">Michele Lisi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>